implementation ball move functionality with shared services

--- a/src/app/ball-container/ball-container.component.html
+++ b/src/app/ball-container/ball-container.component.html
@@ -1,4 +1,4 @@
 <div class="ball-container m-auto position-relative">
-  <app-ball [state]="state"></app-ball>
+  <app-ball></app-ball>
 </div>
-<app-actions (actionOutput)="this.onAction($event)"></app-actions>
+<app-actions></app-actions>
